--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ HTML5/Toulibre
 								</section>
 																		
 									<header class="major">
-										<h2>Un Système Open Source Leader en Tous Points</h2>
+										<h2>Un Système Open Source Leader en Tout Point</h2>
 									</header>
 									<div class="features">
 										<article>
