--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ HTML5/Toulibre
 
                          <!-- Barre de recherche -->
 
-                         <form class="form-wrapper cf" id="search-form" action=action="//forum.ubuntu-fr.org/search_ubuntufr.php" accept-charset="utf-8" method="post">
+                         <form class="form-wrapper cf" id="search-form" action="//forum.ubuntu-fr.org/search_ubuntufr.php" accept-charset="utf-8" method="post">
                               <input type="search" id="tsearch" name="q" placeholder="Rechercher dans" value="" />
                                   <select name="tsearch">
                                          <option value="forum">Forum</option>
