--- a/index.html
+++ b/index.html
@@ -219,17 +219,10 @@ HTML5/Toulibre
              
 									<ul>
 										<li><a href="https://www.ubuntu-fr.org/">Accueil</a></li>
-                                                                                <li><a href="https://www.ubuntu-paris.org/" target="https://www.ubuntu-paris.org/">Ubuntu Party/Paris</a></li>
+										<li><a href="http://doc.ubuntu-fr.org/">Documentation</a></li>
+										<li><a href="http://forum.ubuntu-fr.org/">Forum</a></li>
 										<li><a href="http://releases.ubuntu.com/" target="http://releases.ubuntu.com/">Téléchargements</a></li>
-                                                                                <li><a href="http://doc.ubuntu-fr.org/">Documentation</a></li>
-                                                                                <li>
-											<span class="opener">Forums</span>
-											<ul>
-										<li><a href="http://forum.ubuntu-fr.org/">Forum Ubuntu</a></li>
-										<li><a href="http://forum.kubuntu-fr.org/">Forum Kubuntu</a></li>
-										<li><a href="https://mate-desktop.org/fr/community/">Forum Mate</a></li>
-											</ul>
-										</li>
+                                                                                <li><a href="https://www.ubuntu-paris.org/" target="https://www.ubuntu-paris.org/">Ubuntu Party/Paris</a></li>
 										<li>
 											<span class="opener">La Boutique</span>
 											<ul>
