--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ HTML5/Toulibre
 										<li><a href="#" class="icon far fa-star" titlte="dark" onclick="setActiveStyleSheet ('dark'); return false;"><span class="label">Dark</span></a></li>
 								</ul> 
  
-  									<b>DES MILLIERS D'APPLICATIONS DES MILLIONS D'UTILISATEURS , UNE NOUVELLE FACON D'UTILISER VOTRE ORDINATEUR !</b>
+  									<p><b>DES MILLIERS D'APPLICATIONS DES MILLIONS D'UTILISATEURS , UNE NOUVELLE FACON D'UTILISER VOTRE ORDINATEUR !</b></p>
  
                                                               <section id="slider">
                                                                            <input type="radio" name="slider" id="s1" checked>
