--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ HTML5/Toulibre
 									<ul class="icons">
 										<li><a href="#" class="icon fa-sun-o" title="light" onclick="setActiveStyleSheet ('light'); return false;"><span class="label">Light</span></a></li>
 										<li><a href="#" class="icon fas fa-cloud" title="cloud" onclick="setActiveStyleSheet ('cloud'); return false;"><span class="label">Cloud</span></a></li>
-										<li><a href="#" class="icon fa-moon-o" titlte="evening" onclick="setActiveStyleSheet ('evening'); return false;"><span class="label">Evening</span></a></li>
+										<li><a href="#" class="icon fa-moon-o" title="evening" onclick="setActiveStyleSheet ('evening'); return false;"><span class="label">Evening</span></a></li>
 										<li><a href="#" class="icon far fa-star" titlte="dark" onclick="setActiveStyleSheet ('dark'); return false;"><span class="label">Dark</span></a></li>
 									</ul>
 									</header>
