--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ HTML5/Toulibre
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
-								
+									</div>
 								</section>
 																		
 									<header class="major">
