--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ HTML5/Toulibre
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript" src="assets/js/styleswitcher.js"></script>
+			<script src="assets/js/styleswitcher.js"></script>
                         
 
 
