--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ HTML5/Toulibre
                                                                        
 									<header> <br> 
                                
-											<div id="slider">
+											<center>
+												<div id="slider">
 											  <figure>
 												<img src="images/1.png" alt>
 												<img src="images/2.png" alt>
@@ -65,7 +66,8 @@ HTML5/Toulibre
 												<img src="images/4.png" alt>
 												<img src="images/1.png" alt>
 											  </figure>
-											</div>
+												</div>
+										         </center>
 									</header>
 									<div> <br>
 											<p>Il est conseillé de prendre connaissance du <a href="https://doc.ubuntu-fr.org/debutant" style="color:#e95420;">Guide du débutant</a> et de parcourir la <a href="https://doc.ubuntu-fr.org/Accueil" style="color:#e95420;">Documentation</a>. Ubuntu 18.04 Bionic Beaver LTS est la dernière version avec support long terme jusqu'à 2023 destinée à tous les utilisateurs alors qu'ubuntu 18.10 Cosmic cuttlefish est la dernière version avec support à court terme, environ 9 mois, plus appropriée aux développeurs ou aux amateurs avertis.<a href="https://www.ubuntu.com/#download" target="https://www.ubuntu.com/#download" style="color:#e95420;"> Téléchargez </a> ou commandez <a href="https://enventelibre.org/cles-usb/107-cle-usb-ubuntu-1804-lts.html" target="https://enventelibre.org/cles-usb/107-cle-usb-ubuntu-1804-lts.html" style="color:#e95420;">la clé USB </a> ou <a href="https://enventelibre.org/ubuntu-fr/133-dvd-ubuntu-1804-lts.html" target="https://enventelibre.org/ubuntu-fr/133-dvd-ubuntu-1804-lts.html" style="color:#e95420;"> le DVD </a> Ubuntu 18.04 Bionic Beaver LTS. Vous êtes à la recherche d'une version particulière ? Retrouvez les, des anciennes aux plus récentes, variantes inclues en cliquant sur le <a href="http://releases.ubuntu.com/" style="color:#e95420;"> lien des dépôts officiels ubuntu.</a></p>
