--- a/index.html
+++ b/index.html
@@ -211,8 +211,10 @@ HTML5/Toulibre
 								<nav id="menu">    
                                                        
 				<header class="major">
-                                        <span class="navbar-logo-ubuntu-fr">
-                                        <span class="fab fa-ubuntu fa-3x" style="color: white;"></span>
+                                  <span class="navbar-logo-ubuntu-fr">
+                                  <span class="fab fa-ubuntu fa-3x" style="color: white;"></span>
+                                  <span style="display: block;float: right;color: white;margin-left: 5px;margin-top: -3px;">La&nbsp;Communauté<br>Francophone</span>
+                                  </span>
                                  </header>
 
                          <!-- Barre de recherche -->
