--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ HTML5/Toulibre
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h5>Shopping-Évènements-Actus-Etc...</h5>
+										<h5><span style="color: white;">Shopping-Évènements-Actus-Etc...</span></h5>
 									</header>
 									<div class="mini-posts">
 									       <article>
