--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ HTML5/Toulibre
 				<header class="major">
                                   <span class="navbar-logo-ubuntu-fr">
                                   <span class="fab fa-ubuntu fa-3x" style="color: white;"></span>
-                                  <span style="display: block;float: right;color: white;margin-left: 5px;margin-top: -3px;">La&nbsp;Communauté<br>Francophone</span>
+                                  <span style="display: block;float: right;color: white;margin-left: 5px;margin-top: -3px; font-size: 16px;">Ubuntu-fr.org<br>La&nbsp;Communauté Francophone
                                   </span>
                                  </header>
 
