--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ HTML5/Toulibre
 				<header class="major">
                                   <span class="navbar-logo-ubuntu-fr">
                                   <span class="fab fa-ubuntu fa-3x" style="color: white;"></span>
-                                  <span style="display: block;float: right;color: white;margin-left: 5px;margin-top: -10px; font-size: 26px;">Ubuntu-fr.org<br><span style="display: block;float: right;color: white;margin-left: 2px;margin-top: -8px; font-size: 12px;">La Communauté Francophone
+                                  <span style="display: block;float: right;color: white;margin-left: 5px;margin-top: -10px; font-size: 26px;">Ubuntu-fr<br><span style="display: block;float: right;color: white;margin-left: 2px;margin-top: -8px; font-size: 12px;">La Communauté Francophone
                                   </span>
                                  </header>
 
