--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ HTML5/Toulibre
 											<center>
 												<div id="slider">
 											  <figure>
-												<img src="images/1.png" alt>
-												<img src="images/2.png" alt>
-												<img src="images/3.png" alt>
-												<img src="images/4.png" alt>
-												<img src="images/1.png" alt>
+												<img src="images/1.jpg" alt>
+												<img src="images/2.jpg" alt>
+												<img src="images/3.jpg" alt>
+												<img src="images/4.jpg" alt>
+												<img src="images/1.jpg" alt>
 											  </figure>
 												</div>
 										         </center>
