--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ HTML5/Toulibre
 								    <header id="header">
                                         <h1>Bienvenue</h1> 
                                     <ul class="icons">
-                                        <li><a href="https://twitter.com/ubuntufrorg" class="icon fa-twitter"><span class="label">Twitter</span>fr</a></li>
-										<li><a href="https://twitter.com/ubuntuparty" class="icon fa-twitter"><span class="label">Twitter</span>party</a></li>
-										<li><a href="https://www.facebook.com/ubuntuparty" class="icon fa-facebook"><span class="label">Facebook</span></a></li>										
-										<li><a href="https://www.reddit.com/r/ubuntufr/" class="icon fab fa-reddit-alien"><span class="label">Reddit</span></a></li>
+                                        <li><a href="https://twitter.com/ubuntufrorg" class="icon fa-twitter" title="ubuntu-fr"><span class="label">Twitter</span>fr</a></li>
+										<li><a href="https://twitter.com/ubuntuparty" class="icon fa-twitter" title="ubuntu-party"><span class="label">Twitter</span>party</a></li>
+										<li><a href="https://www.facebook.com/ubuntuparty" class="icon fa-facebook" title="ubuntu-party"><span class="label">Facebook</span></a></li>										
+										<li><a href="https://www.reddit.com/r/ubuntufr/" class="icon fab fa-reddit-alien" title="ubuntu-fr"><span class="label">Reddit</span></a></li>
                                 
 					                </ul>									        
                                     </header>                                    
