--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ HTML5/Toulibre
 											<span class="icon fas fa-subway"></span>
 											<div class="content">
 												<h3>N°1 des Conteneurs</h3>
-												<p>De Docker à Kubernetes, les experts choisissent Ubuntu pour les opérations de conteneur. La version du noyau est le principal facteur de qualité, de sécurité et de performance, et Canonical garantit qu'Ubuntu possède toujours les derniers noyaux avec les dernières fonctionnalités de sécurit.</p>
+												<p>De Docker à Kubernetes, les experts choisissent Ubuntu pour les opérations de conteneur. La version du noyau est le principal facteur de qualité, de sécurité et de performance, et Canonical garantit qu'Ubuntu possède toujours les derniers noyaux avec les dernières fonctionnalités de sécurité.</p>
 											</div>
 										</article>
 									</div>
