--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ HTML5/Toulibre
                          <!-- Barre de recherche -->
 
                          <form class="form-wrapper cf" id="search-form" action="//forum.ubuntu-fr.org/search_ubuntufr.php" accept-charset="utf-8" method="get">
-                              <input type="search" id="tsearch" name="q" placeholder="Rechercher dans" value="" />
+                              <input type="search" id="tsearch" name="q" placeholder="Rechercher dans" value="" required/>
                                   <select name="tsearch">
                                          <option value="forum">Forum</option>
                                          <option value="wiki">Documentation</option>
