--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ HTML5/Toulibre
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Les autres variantes libres basées sur Ubuntu</h2>
+										<h2>Les variantes officielles libres basées sur Ubuntu</h2>
 									</header>
 
 									<div class="posts">
