--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ HTML5/Toulibre
                                 <section>
 									<div>
                                                                         <ul class="actions">
-										<h3><a href="https://doc.ubuntu-fr.org/derivees_d_ubuntu" class="button">Les autres variantes  libres basées sur Ubuntu.</a></h3>
+										<h3><a href="https://doc.ubuntu-fr.org/derivees_d_ubuntu">Les autres variantes  libres basées sur Ubuntu.</a></h3>
                                                                         </ul>
                                                                         <p>Ce sont des distributions basées sur Ubuntu. Ces projets sont démarrés et maintenus uniquement par leur communauté respective, et ne reçoivent aucun soutien de la part de Canonical ou de la communauté Ubuntu.</b>
                                                                         </div>
