--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ HTML5/Toulibre
 										<article>
 											<a href="https://doc.ubuntu-fr.org/lubuntu" class="image"><img src="images/lubuntu.jpg" alt="lubuntu.jpg" /></a>
 											<h3>Lubuntu</h3>
-											<p>Lubuntu est un système d'exploitation rapide et léger, doté d'une interface utilisateur propre et facile à utiliser. Il s’agit d’un système Linux utilisant le bureau minimal LXDE / LXQT et une sélection d’applications légères . Pour cette raison, Lubuntu a des exigences matérielles très faibles. L'installation ne nécessite que 384 Mo de mémoire vive ainsi que de 4,3 Go d'espace disque.</p>
+											<p>Lubuntu est un système d'exploitation rapide et léger, doté d'une interface utilisateur propre et facile à utiliser. Il s’agit d’un système Linux utilisant le bureau minimal LXDE / LXQT et une sélection d’applications légères . Pour cette raison, Lubuntu a des exigences matérielles très faibles. L'installation ne nécessite que 384 Mo de mémoire vive, il est cependant recommandé de disposer entre 384 et 800mo ainsi que de 4,3 Go d'espace disque.</p>
 											<ul class="actions">
 												<li><a href="https://doc.ubuntu-fr.org/lubuntu" class="button">Plus d'Informations</a></li>
 											</ul>
