--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ HTML5/Toulibre
 										<article>
 											<a href="https://doc.ubuntu-fr.org/mate" class="image"><img src="images/ubuntu-mate.jpg" alt="images/ubuntu-mate.jpg" /></a>
 											<h3>Ubuntu MATE</h3>
-											<p>Ubuntu MATE est un système d'exploitation stable et facile à utiliser avec un environnement de bureau configurable, il convient aux stations de travail modernes, aux ordinateurs à carte unique et aux matériels plus anciens. Il est idéal pour ceux qui veulent en tirer le meilleur parti.</p>
+											<p>Ubuntu MATE est un système d'exploitation stable et facile à utiliser avec un environnement de bureau configurable, il convient aux stations de travail modernes, aux ordinateurs à carte unique et aux matériels plus anciens. Il est idéal pour ceux qui veulent en tirer le meilleur parti et préfèrent une métaphore de bureau traditionnelle.</p>
 											<ul class="actions">
 											      <li><a href="https://doc.ubuntu-fr.org/mate" class="button">Plus d'Informations</a></li>
 											</ul>
